# Manim-Agent

./: README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py
Tex/: 022299e9461e12a1.tex  0ef14e7366de515a.tex  0ef2a2e1f2cc846d.tex  0f290219d27313d2.tex  1255d05b21c340a2.tex  14ed7cfa29e33f8a.tex  1801e1ff92de99cf.tex  1807e07d17d2cf13.tex  1afa3c8c603c3a18.tex  1c126b11f74efc08.tex  1cea93d5b9f52e02.tex  1ee9c70f0aa2af75.tex  1fad5a37bf429fe3.tex  222457ecc5315c0d.tex  22710df418283b87.tex  242883561b6e28c0.tex  2574a6965d85839d.tex  25aa4092bfe49ac5.tex  291e57b23be1c1b7.tex  2a71cc64c063540f.tex  2b7239ad73a0835d.tex  2d4709ed0ac76150.tex  2e7b3cbec16e294c.tex  2ed4e885240f830e.tex  3204d68a3091e4be.tex  37cfd7b2046a7e66.tex  37d568548c85a246.tex  3ad467f7756815d7.tex  3b79daba3395fc53.tex  3f66323abf71fa5c.tex  40177c2c79be467d.tex  410e7622f838673d.tex  465e5565110fed15.tex  4c72d30b699e8033.tex  4d677f8bccd78622.tex  53f608a2dfe3e890.tex  5595e4770761bd3c.tex  588497000627d1ba.tex  58bb4d5ad30db27b.tex  5dcec6252d931fcc.tex  (+57 more)
code/: MathScene_20250616_185642.py
templates/: index.html
videos/Tex/: 01d82765cf5b2676.tex  04d1b511ab3eebb7.tex  1458a2281cd341d8.tex  1520467ef8f4f48a.tex  19d970dff0e3902b.tex  1cdd72d432ff590a.tex  1ea4fd56fe748cb9.tex  2ddcd7f25955ca0f.tex  3020c91ea51441a4.tex  360946c31ed2c944.tex  44785b4b7edfdc3c.tex  4b12691287b6bb4b.tex  4c29609cd8fa68cd.tex  4c84cc6c6d53792d.tex  58e1fa186756e74b.tex  6655b51d2ee6d30f.tex  6e4fb9deb87f0a20.tex  7726388971044225.tex  7d7b6296e1e96624.tex  8433a5aa7a4be402.tex  (+18 more)
(+90 files in other folders)
