[project]
name = "manim-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fitz>=0.0.1.dev2",
    "flask>=3.1.1",
    "manim>=0.19.0",
    "openai>=1.86.0",
    "pymupdf>=1.26.1",
    "pypdf2>=3.0.1",
    "setuptools>=80.9.0",
]
